experiments/6a/02932becaeaeb02eddfaed567f3dad3719dd1c/error
MESSAGE: Execution of "./build_llvm_project.sh" failed

STDOUT:
[1537/2781] Building DiagnosticDriverKinds.inc...
[1538/2781] Building DiagnosticCommonKinds.inc...
[1539/2781] Building DiagnosticCommentKinds.inc...
[1540/2781] Building X86GenDAGISel.inc...
[1541/2781] Building DiagnosticASTKinds.inc...
[1542/2781] Building DiagnosticAnalysisKinds.inc...
[1543/2781] Building AttrList.inc...
[1544/2781] Building DiagnosticSemaKinds.inc...
[1545/2781] Building AttrSubMatchRulesList.inc...
[1546/2781] Building arm_neon.inc...
[1547/2781] Building arm_sve_typeflags.inc...
[1548/2781] Building arm_fp16.inc...
[1549/2781] Building DiagnosticCrossTUKinds.inc...
[1550/2781] Building arm_cde_builtins.inc...
[1551/2781] Building arm_mve_builtins.inc...
[1552/2781] Building arm_mve_builtin_sema.inc...
[1553/2781] Building DiagnosticSerializationKinds.inc...
[1554/2781] Building DiagnosticRefactoringKinds.inc...
[1555/2781] Building AttrHasAttributeImpl.inc...
[1556/2781] Building arm_mve_builtin_cg.inc...
[1557/2781] Building Options.inc...
[1558/2781] Building AttrSubMatchRulesParserStringSwitches.inc...
[1559/2781] Building CXX object lib/MC/MCParser/CMakeFiles/LLVMMCParser.dir/AsmParser.cpp.o
[1560/2781] Building AttrParserStringSwitches.inc...
[1561/2781] Building arm_sve_builtin_cg.inc...
[1562/2781] Building AttrParsedAttrImpl.inc...
[1563/2781] Building AttrSpellingListIndex.inc...
[1564/2781] Linking CXX static library lib/libLLVMMCParser.a
[1565/2781] Building AttrParsedAttrKinds.inc...
[1566/2781] Building AttrParsedAttrList.inc...
[1567/2781] Building AttrTemplateInstantiate.inc...
[1568/2781] Building AttrPCHWrite.inc...
[1569/2781] Building Checkers.inc...
[1570/2781] Building AttrPCHRead.inc...
[1571/2781] Linking CXX static library lib/libLLVMObject.a
[1572/2781] Copying clang's altivec.h...
[1573/2781] Linking CXX static library lib/libLLVMInterfaceStub.a
[1574/2781] Linking CXX static library lib/libLLVMObjectYAML.a
[1575/2781] Linking CXX static library lib/libLLVMDebugInfoDWARF.a
[1576/2781] Linking CXX static library lib/libLLVMAnalysis.a
[1577/2781] Linking CXX static library lib/libLLVMDebugInfoGSYM.a
[1578/2781] Linking CXX static library lib/libLLVMBitWriter.a
[1579/2781] Linking CXX static library lib/libLLVMTransformUtils.a
[1580/2781] Linking CXX static library lib/libLLVMDebugInfoPDB.a
[1581/2781] Linking CXX static library lib/libLLVMFrontendOpenMP.a
[1582/2781] Linking CXX static library lib/libLLVMAggressiveInstCombine.a
[1583/2781] Linking CXX static library lib/libLLVMInstrumentation.a
[1584/2781] Linking CXX static library lib/libLLVMVectorize.a
[1585/2781] Linking CXX static library lib/libLLVMInstCombine.a
[1586/2781] Linking CXX static library lib/libLLVMObjCARCOpts.a
[1587/2781] Linking CXX static library lib/libLLVMLinker.a
[1588/2781] Building X86GenInstrInfo.inc...
[1589/2781] Linking CXX static library lib/libLLVMSymbolize.a
[1590/2781] Linking CXX static library lib/libLLVMJITLink.a
[1591/2781] Linking CXX static library lib/libLLVMRuntimeDyld.a
[1592/2781] Linking CXX static library lib/libLLVMTarget.a
[1593/2781] Linking CXX static library lib/libLLVMScalarOpts.a
[1594/2781] Linking CXX static library lib/libLLVMCoverage.a
[1595/2781] Linking CXX static library lib/libLLVMExecutionEngine.a
[1596/2781] Linking CXX static library lib/libLLVMFuzzMutate.a
[1597/2781] Linking CXX static library lib/libLLVMMCJIT.a
[1598/2781] Linking CXX static library lib/libLLVMDlltoolDriver.a
[1599/2781] Building CXX object tools/clang/tools/clang-fuzzer/handle-llvm/CMakeFiles/obj.clangHandleLLVM.dir/handle_llvm.cpp.o
[1600/2781] Linking CXX static library lib/libLLVMipo.a
[1601/2781] Linking CXX static library lib/libLLVMLibDriver.a
[1602/2781] Linking CXX static library lib/libLLVMCoroutines.a
[1603/2781] Linking CXX static library lib/libLLVMXRay.a
[1604/2781] Copying clang's arm64intr.h...
[1605/2781] Copying clang's avx2intrin.h...
[1606/2781] Copying clang's adxintrin.h...
[1607/2781] Copying clang's amxintrin.h...
[1608/2781] Copying clang's arm_cmse.h...
[1609/2781] Linking CXX static library lib/libLLVMCodeGen.a
[1610/2781] Copying clang's armintr.h...
[1611/2781] Linking CXX static library lib/libLLVMAsmPrinter.a
[1612/2781] Linking CXX static library lib/libLLVMMIRParser.a
[1613/2781] Linking CXX static library lib/libLLVMSelectionDAG.a
[1614/2781] Linking CXX static library lib/libLLVMDWARFLinker.a
[1615/2781] Linking CXX static library lib/libLLVMGlobalISel.a
[1616/2781] Linking CXX static library lib/libLLVMInterpreter.a
[1617/2781] Copying clang's arm_acle.h...
[1618/2781] Copying clang's avx512bitalgintrin.h...
[1619/2781] Copying clang's avx512vlbitalgintrin.h...
[1620/2781] Copying clang's avx512cdintrin.h...
[1621/2781] Copying clang's ammintrin.h...
[1622/2781] Copying clang's avx512bf16intrin.h...
[1623/2781] Copying clang's avx512bwintrin.h...
[1624/2781] Copying clang's avx512vpopcntdqintrin.h...
[1625/2781] Copying clang's avx512dqintrin.h...
[1626/2781] Copying clang's avx512erintrin.h...
[1627/2781] Copying clang's avx512fintrin.h...
[1628/2781] Copying clang's avx512ifmaintrin.h...
[1629/2781] Copying clang's avx512ifmavlintrin.h...
[1630/2781] Copying clang's avx512pfintrin.h...
[1631/2781] Copying clang's avx512vbmiintrin.h...
[1632/2781] Copying clang's avx512vbmivlintrin.h...
[1633/2781] Building CXX object tools/clang/lib/CodeGen/CMakeFiles/obj.clangCodeGen.dir/CGBlocks.cpp.o
[1634/2781] Copying clang's avx512vbmi2intrin.h...
[1635/2781] Copying clang's avx512vlvbmi2intrin.h...
[1636/2781] Copying clang's avx512vlbf16intrin.h...
[1637/2781] Copying clang's avx512vlbwintrin.h...
[1638/2781] Building X86GenSubtargetInfo.inc...
[1639/2781] Copying clang's avx512vlcdintrin.h...
[1640/2781] Copying clang's avx512vldqintrin.h...
[1641/2781] Copying clang's avx512vlintrin.h...
[1642/2781] Building CXX object tools/clang/lib/CodeGen/CMakeFiles/obj.clangCodeGen.dir/CGAtomic.cpp.o
[1643/2781] Building CXX object lib/Passes/CMakeFiles/LLVMPasses.dir/StandardInstrumentations.cpp.o
FAILED: lib/Passes/CMakeFiles/LLVMPasses.dir/StandardInstrumentations.cpp.o 
CCACHE_CPP2=yes CCACHE_HASHDIR=yes /usr/bin/ccache /usr/bin/c++  -DGTEST_HAS_RTTI=0 -D_GNU_SOURCE -D__STDC_CONSTANT_MACROS -D__STDC_FORMAT_MACROS -D__STDC_LIMIT_MACROS -Ilib/Passes -I/root/llvm-compile-time-tracker/llvm-project/llvm/lib/Passes -Iinclude -I/root/llvm-compile-time-tracker/llvm-project/llvm/include -fPIC -fvisibility-inlines-hidden -Werror=date-time -Wall -Wextra -Wno-unused-parameter -Wwrite-strings -Wcast-qual -Wno-missing-field-initializers -pedantic -Wno-long-long -Wimplicit-fallthrough -Wno-maybe-uninitialized -Wno-class-memaccess -Wno-redundant-move -Wno-noexcept-type -Wdelete-non-virtual-dtor -Wsuggest-override -Wno-comment -fdiagnostics-color -ffunction-sections -fdata-sections -O3 -DNDEBUG    -fno-exceptions -fno-rtti -std=c++14 -MD -MT lib/Passes/CMakeFiles/LLVMPasses.dir/StandardInstrumentations.cpp.o -MF lib/Passes/CMakeFiles/LLVMPasses.dir/StandardInstrumentations.cpp.o.d -o lib/Passes/CMakeFiles/LLVMPasses.dir/StandardInstrumentations.cpp.o -c /root/llvm-compile-time-tracker/llvm-project/llvm/lib/Passes/StandardInstrumentations.cpp
/root/llvm-compile-time-tracker/llvm-project/llvm/lib/Passes/StandardInstrumentations.cpp: In destructor ‘virtual llvm::IRChangePrinter::~IRChangePrinter()’:
/root/llvm-compile-time-tracker/llvm-project/llvm/lib/Passes/StandardInstrumentations.cpp:341:46: error: no matching function for call to ‘llvm::IRChangePrinter::~IRChangePrinter()’
  341 |   ChangePrinter<std::string>::~ChangePrinter();
      |                                              ^
/root/llvm-compile-time-tracker/llvm-project/llvm/lib/Passes/StandardInstrumentations.cpp:334:29: note: candidate: ‘llvm::ChangePrinter<IRUnitT>::~ChangePrinter() [with IRUnitT = std::__cxx11::basic_string<char>]’
  334 | template <typename IRUnitT> ChangePrinter<IRUnitT>::~ChangePrinter<IRUnitT>() {
      |                             ^~~~~~~~~~~~~~~~~~~~~~
/root/llvm-compile-time-tracker/llvm-project/llvm/lib/Passes/StandardInstrumentations.cpp:334:29: note:   candidate expects 1 argument, 0 provided
/root/llvm-compile-time-tracker/llvm-project/llvm/lib/Passes/StandardInstrumentations.cpp: At global scope:
/root/llvm-compile-time-tracker/llvm-project/llvm/lib/Passes/StandardInstrumentations.cpp:418:2: warning: extra ‘;’ [-Wpedantic]
  418 | };
      |  ^
[1644/2781] Building CXX object lib/Target/X86/CMakeFiles/LLVMX86CodeGen.dir/X86AvoidTrailingCall.cpp.o
[1645/2781] Building CXX object lib/Target/X86/CMakeFiles/LLVMX86CodeGen.dir/X86CallFrameOptimization.cpp.o
[1646/2781] Building CXX object lib/Target/X86/CMakeFiles/LLVMX86CodeGen.dir/X86CallingConv.cpp.o
[1647/2781] Building CXX object lib/Target/X86/CMakeFiles/LLVMX86CodeGen.dir/X86AsmPrinter.cpp.o
[1648/2781] Building CXX object lib/Target/X86/CMakeFiles/LLVMX86CodeGen.dir/X86CallLowering.cpp.o
ninja: build stopped: subcommand failed.


STDERR:
-- Version: 0.0.0
-- Performing Test HAVE_GNU_POSIX_REGEX
-- Performing Test HAVE_GNU_POSIX_REGEX
-- Performing Test HAVE_GNU_POSIX_REGEX -- failed to compile
-- Performing Test HAVE_POSIX_REGEX
-- Performing Test HAVE_POSIX_REGEX
-- Performing Test HAVE_POSIX_REGEX -- success
-- Performing Test HAVE_STEADY_CLOCK
-- Performing Test HAVE_STEADY_CLOCK
-- Performing Test HAVE_STEADY_CLOCK -- success
Command exited with non-zero status 1
51.31user 5.85system 0:10.00elapsed 571%CPU (0avgtext+0avgdata 412308maxresident)k
0inputs+947320outputs (25major+2330704minor)pagefaults 0swaps
